--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
     <string name="app_name">DogApp2</string>
+
+    <string name="dog_names">Australian Shepherd</string>
+
+    <string name="description">BALBALBALBALBAL</string>
+
+    <string-array name="array_dog_breeds_all_names">
+        <item>Australian Shepherd</item>
+        <item>Chihuahua</item>
+        <item>German Shepherd</item>
+        <item>Golden Retriever</item>
+        <item>Labrador Retriever</item>
+        <item>Newfoundland</item>
+        <item>Poodle</item>
+        <item>Rottweiler</item>
+        <item>Shih Tzu</item>
+    </string-array>
+
 </resources>
